2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>
	* godmode/setup/setup.php: fix bug that overwrite the row of "Attachment
	store" field when put the row of field "IP list with API access".

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fix mistake with dates, sorry.

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/menu.css, godmode/gis_maps, godmode/menu.php,
	godmode/gis_maps/configure_gis_map.php, godmode/gis_maps/index.php: add the
	page to manipulate the GIS maps and add the page to create (and edit not at
	the moment) the GIS maps.
	* operation/gis_maps/render_view.php: small changes in the develop of
	render, add events and popups.
	* include/functions_gis.php: add code for respond to events, add function
	"saveMap" to save a map.

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/OpenLayers/*: commit lost files of OpenLayer library.

2010-01-20  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/file_manager.php: Added support for file and empty
	  directory deletion.

2010-01-20  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Fixed paths for Fusion Charts.

2010-01-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php, operation/gis_maps/ajax.php: code for GIS maps,
	now show correctly the path points and start to show the popup for this
	points.
	* include/javascript/OpenLayers/lib/Gears/gears_init.js,
	include/javascript/OpenLayers/lib/OpenLayers/Format/ArcXML/Features.js:
	some files of OpenLayers that I erased in the previous clean.
	* images/spinner.gif: image for ajax loading.

2010-01-18 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/visual_console/render_view.php: fix style, add a white space.
	
	* include/styles/menu.css, include/styles/pandora.css: add styles for
	GIS maps.
	* operation/gis_maps/*, operation/menu.php, images/gis_map,
	godmode/setup/gis.php, godmode/menu.php: add first version of GIS maps.
	